Give user write permissions to /usr/lib/SerialLoops for config file writing

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -96,6 +96,7 @@ stages:
         Push-Location dpkg-build/SerialLoops
         Write-Output "Package: SerialLoops`nVersion: $(Version)`nSection: custom`nPriority: optional`nArchitecture: all`nEssential: no`nMaintainer: The Haroohie Translation Club <haroohietranslation@gmail.com>`nHomepage: https://haroohie.club/`nDescription: Editor for Suzumiya Haruhi no Chokuretsu`n" | Out-File -FilePath DEBIAN/control
         Write-Output "[Desktop Entry]`nVersion=$(Version)`nName=Serial Loops`nComment=Editor for Suzumiya Haruhi no Chokuretsu`nExec=/usr/bin/SerialLoops`nIcon=/usr/lib/SerialLoops/Icons/AppIcon.png`nTerminal=false`nType=Application`nCategories=Utility;Application;`n" | Out-File -FilePath usr/share/applications/SerialLoops.desktop
+        chmod 777 usr/lib/SerialLoops
         chmod +x usr/share/applications/SerialLoops.desktop
         mv $(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Gtk/Release/net6.0/linux-x64/publish/* usr/lib/SerialLoops
         ln -s /usr/lib/SerialLoops/SerialLoops usr/bin/SerialLoops
