--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>0.1.0</Version>
+    <Version>$(SLVersion)</Version>
     <AssemblyName>SerialLoops.Eto</AssemblyName>
   </PropertyGroup>
 
