--- a/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
+++ b/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
@@ -4,7 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <ApplicationIcon>WindowsIcon.ico</ApplicationIcon>
-    <Version>$(SLVersion)</Version>
+    <Version>$(SLAssemblyVersion)</Version>
+    <InformationalVersion>$(SLVersion)</InformationalVersion>
     <AssemblyName>SerialLoops</AssemblyName>
   </PropertyGroup>
 
