--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Graphics\MS-Gothic-Haruhi.ttf" />
     <None Remove="Graphics\ScriptPreviewError.png" />
     <None Remove="Icons\Add.png" />
     <None Remove="Icons\Add_Section.png" />
@@ -65,6 +66,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Graphics\MS-Gothic-Haruhi.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Graphics\ScriptPreviewError.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -72,7 +76,9 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.7.4" />
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.3" />
     <PackageReference Include="System.Text.Json" Version="7.0.2" />
+    <PackageReference Include="Topten.RichTextKit" Version="0.4.165" />
   </ItemGroup>
 
   <ItemGroup>
