--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -14,6 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Graphics\BlankNameplate.png" />
+    <None Remove="Graphics\BlankNameplateBaseArrow.png" />
+    <None Remove="Graphics\msgothic-variablewidth.ttf" />
     <None Remove="Graphics\ScriptPreviewError.png" />
     <None Remove="Icons\Add.png" />
     <None Remove="Icons\Add_Section.png" />
@@ -65,14 +68,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Graphics\BlankNameplate.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Graphics\BlankNameplateBaseArrow.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Graphics\ScriptPreviewError.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Forms" Version="2.7.4" />
+    <PackageReference Include="Eto.Forms" Version="2.7.5" />
     <PackageReference Include="System.Text.Json" Version="7.0.2" />
+    <PackageReference Include="Topten.RichTextKit" Version="0.4.165" />
   </ItemGroup>
 
   <ItemGroup>
