--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -10,12 +10,15 @@
 
   <ItemGroup>
     <PackageReference Include="BunLabs.NAudio.Flac" Version="2.0.1" />
-    <PackageReference Include="HaruhiChokuretsuLib" Version="0.27.2" />
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.3" />
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.3" />
+    <PackageReference Include="HaruhiChokuretsuLib" Version="0.27.5" />
     <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
     <PackageReference Include="NitroPacker.Core" Version="2.1.0" />
     <PackageReference Include="NLayer" Version="1.14.0" />
     <PackageReference Include="NLayer.NAudioSupport" Version="1.3.0" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
+    <PackageReference Include="Topten.RichTextKit" Version="0.4.165" />
     <PackageReference Include="VCDiff" Version="4.0.1" />
   </ItemGroup>
 
