--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -87,7 +87,8 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.7.5" />
-    <PackageReference Include="System.Text.Json" Version="7.0.2" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.0.1" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
