Fixup Mac app name

--- a/src/SerialLoops.Mac/SerialLoops.Mac.csproj
+++ b/src/SerialLoops.Mac/SerialLoops.Mac.csproj
@@ -8,6 +8,7 @@
     <Version>$(SLAssemblyVersion)</Version>
     <InformationalVersion>$(SLVersion)</InformationalVersion>
     <AssemblyName>SerialLoops</AssemblyName>
+    <MacBundleName>Serial Loops.app</MacBundleName>
   </PropertyGroup>
 
   <ItemGroup>
