--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -251,7 +251,7 @@ stages:
           firewall software &ndash; please allow it through so it can function correctly.
 
           ### macOS
-          On macOS, after dragging the app from the dmg into Applications, please run `xattr -cr /Applications/SerialLoops.Mac.app` from the Terminal in order to be able to run the app. This is required because we currently don't codesign the application, meaning macOS will refuse to run it without explicit approval from you.
+          On macOS, after dragging the app from the dmg into Applications, please run `xattr -cr "/Applications/Serial Loops.app"` from the Terminal in order to be able to run the app. This is required because we currently don't codesign the application, meaning macOS will refuse to run it without explicit approval from you.
           
           #### Which macOS dmg should I choose?
           If your Mac is newer, you will probably want the ARM dmg. If it is older, you will want the x64 one. If unsure, download the ARM one first and attempt to run it &ndash; it will throw an error saying it can't be run on this computer if your computer is not able to run it. If that's the case, download the x64 one instead.
