Fixup mac build real

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -54,7 +54,7 @@ stages:
           artifactName: 'macOS-x64-v$(Version)'
           framework: 'net6.0'
           rid: 'osx-x64'
-          artifactPath: '$(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Mac/Release/net6.0/osx-x64/Serial\ Loops.dmg'
+          artifactPath: '$(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Mac/Release/net6.0/osx-x64/Serial Loops.dmg'
           secondArtifactPath: ''
           thirdArtifactPath: ''
           extraPublishParams: '/p:EnableDmgBuild=true'
@@ -64,7 +64,7 @@ stages:
           artifactName: 'macOS-arm-v$(Version)'
           framework: 'net6.0'
           rid: 'osx-arm64'
-          artifactPath: '$(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Mac/Release/net6.0/osx-arm64/Serial\ Loops.Mac.dmg'
+          artifactPath: '$(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Mac/Release/net6.0/osx-arm64/Serial Loops.dmg'
           secondArtifactPath: ''
           thirdArtifactPath: ''
           extraPublishParams: '/p:EnableDmgBuild=true'
