Add displayName, switch order

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,11 +45,6 @@ jobs:
   steps:
   - checkout: self
     clean: publishTestResults
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: 'build'
-      projects: $(Build.SourcesDirectory)/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
-    displayName: Build SerialLoops.Wpf
   - pwsh: |
       net stop com.docker.service
       taskkill /IM "Docker Desktop.exe" /F
@@ -58,6 +53,12 @@ jobs:
       Set-Content -Path $env:APPDATA\DOCKER\settings.json -Value $(ConvertTo-Json $dockerSettings)
       net start com.docker.service
       & "$env:ProgramFiles\Docker\Docker\Docker Desktop.exe"
+    displayName: Switch Docker to Linux-based containers
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'build'
+      projects: $(Build.SourcesDirectory)/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
+    displayName: Build SerialLoops.Wpf
   - task: Docker@2
     displayName: Pull devkitpro/devkitarm in advance
     inputs:
