--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,10 +63,8 @@ jobs:
     displayName: 'VsTest - Run UI Tests'
     inputs:
       testAssemblyVer2: |
-        **\*Tests.dll
-        !**\*TestAdapter.dll
-        !**\obj\**
-      searchFolder: '$(Build.SourcesDirectory)/test/ui/SerialLoops.Wpf.Tests'
+        **\SerialLoops.Wpf.Tests.dll
+      searchFolder: $(Build.SourcesDirectory)/test/ui/SerialLoops.Wpf.Tests
       uiTests: true
     env:
       APP_LOCATION: $(Build.SourcesDirectory)/src/SerialLoops.Wpf/bin/Debug/net8.0/SerialLoops.exe
@@ -74,7 +72,7 @@ jobs:
       ROM_URI: $(ChokuRomUri)
   - task: PublishBuildArtifacts@1
     inputs:
-      PathtoPublish: '$(Build.ArtifactsStagingDirectory)/SerialLoops.log'
-      ArtifactName: 'SerialLoops_Logs'
-      publishLocation: 'Container'
+      PathtoPublish: $(Build.ArtifactsStagingDirectory)/SerialLoops.log
+      ArtifactName: SerialLoops_Logs
+      publishLocation: Container
     displayName: Publish Serial Loops logs
