--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,8 +50,8 @@ jobs:
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
-      projects: $(Build.SourcesDirectory)/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
-    displayName: Build SerialLoops.Wpf
+      projects: $(Build.SourcesDirectory)/test/ui/SerialLoops.Wpf.Tests/SerialLoops.Wpf.Tests.csproj
+    displayName: Build SerialLoops.Wpf.Tests
   - task: Docker@2
     displayName: Pull devkitpro/devkitarm in advance
     inputs:
